manifests/08-app/07-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: "https://github.com/vrutkovs/lyrics-llm"
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"lyrics-llm:latest","namespace":"ptal-generator"},"fieldPath":"spec.template.spec.containers[?(@.name==\"lyrics-llm\")].image","paused":false}]'
  name: lyrics-llm
  namespace: ptal-generator
  labels:
    app: lyrics-llm
    app.kubernetes.io/component: lyrics-llm
    app.kubernetes.io/instance: lyrics-llm
    app.kubernetes.io/name: lyrics-llm
    app.kubernetes.io/part-of: lyrics-llm-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.12-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-llm
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lyrics-llm
        deployment: lyrics-llm
    spec:
      volumes:
        - name: settings
          secret:
            secretName: settings
            defaultMode: 420
      containers:
        - name: lyrics-llm
          image: "image-registry.openshift-image-registry.svc:5000/ptal-generator/lyrics-llm:latest"
          ports:
            - containerPort: 8501
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: settings
              readOnly: true
              mountPath: /app/.env
              subPath: .env
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
